RESOLVED FIXED91915
Anything else in the "in table" insertion mode is a parse error
https://bugs.webkit.org/show_bug.cgi?id=91915
Summary Anything else in the "in table" insertion mode is a parse error
Kwang Yul Seo
Reported 2012-07-20 18:27:14 PDT
According to the HTML5 spec, anything else in the "in table" insertion mode is a parse error. http://www.whatwg.org/specs/web-apps/current-work/multipage/tree-construction.html#parsing-main-intable 12.2.5.4.9 The "in table" insertion mode Anything else Parse error. Process the token using the rules for the "in body" insertion mode, except that whenever a node would be inserted into the current node when the current node is a table, tbody, tfoot, thead, or tr element, then it must instead be foster parented.
Attachments
Patch (1.50 KB, patch)
2012-07-20 18:29 PDT, Kwang Yul Seo
no flags
Kwang Yul Seo
Comment 1 2012-07-20 18:29:43 PDT
WebKit Review Bot
Comment 2 2012-07-20 19:46:45 PDT
Comment on attachment 153636 [details] Patch Clearing flags on attachment: 153636 Committed r123284: <http://trac.webkit.org/changeset/123284>
WebKit Review Bot
Comment 3 2012-07-20 19:46:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.