Anything else in the "in table" insertion mode is a parse error https://bugs.webkit.org/show_bug.cgi?id=91915

Patch by Kwang Yul Seo <skyul@company100.net> on 2012-07-20
Reviewed by Adam Barth.

According to the HTML5 spec, anything else in the "in table" insertion mode is a parse error.

No behavior change because parseError(token) is just a marker.

* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::processEndTagForInTable):

Canonical link: https://commits.webkit.org/109738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123284 268f45cc-cd09-0410-ab3c-d52691b4dbfc